2000-06-01  J.T. Conklin  <jtc@redback.com>

	* config.bfd (i[3456]86-*-netbsdelf*): New target.
	(i[3456]86-*-netbsdaout*): New target.
	(i[3456]86-*-netbsd*): Add bfd_elf32_i386_vec to targ_selvecs.
	(i[3456]86-*-openbsd*): Likewise.

Tue May 30 15:39:04 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* trad-core.c: From hpux-core.c, include <dirent.h> or
 	<sys/ndir.h> when possible.

2000-05-31  Nick Clifton  <nickc@cygnus.com>

	* opintl.h (_(String)): Explain why dgettext is used instead
	of gettext. 

2000-05-31  Ulrich Drepper  <drepper@redhat.com>

	* elf.c (_bfd_elf_slurp_version_tables): Correct reading of version
	definitions.  We must not assume they are sorted in the file
	according to their index numbers.

2000-05-31  Alan Modra  <alan@linuxcare.com.au>

	* elf-hppa.h: (elf_hppa_final_link_relocate): Use e_rsel field
        selector for R_PARISC_PCREL17R.  R_PARISC_DIR17R and
        R_PARISC_DIR17F are for absolute branches; Handle them as such.

2000-05-30  Nick Clifton  <nickc@cygnus.com>

	* cpu-i960.c (scan_960_mach): Accept 80960KA, 80960KB,
	80960CA, 80960MC as valid machine names.

2000-05-30  H.J. Lu  <hjl@gnu.org>

	* elflink.c (_bfd_elf_link_record_dynamic_symbol): Clear the
	visibility bits if the symbol is undefined. Correctly handle
	weak undefined symbols with hidden and internal attributes.

	* elflink.h (elf_link_add_object_symbols): Always turn the
	symbol into local if it has the hidden or internal attribute.

2000-05-29  Philip Blundell  <philb@gnu.org>

	* ppcboot.c:  Add packed attribute if compiling with GCC.

2000-05-29  Anatoly Vorobey  <mellon@pobox.com>

	* elf.c (_bfd_elf_link_hash_table_init): Initialize dynlocal.

2000-05-26  Alan Modra  <alan@linuxcare.com.au>

	* Makefile.am: Update dependencies with "make dep-am"
	* Makefile.in: Regenerate.

	* sysdep.h (gettext, dgettext, dcgettext, textdomain,
	bindtextdomain): Replace defines with those from intl/libgettext.h
	to quieten gcc warnings.
